--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -934,11 +934,12 @@ p {
   box-shadow: 0px 8px 16px 0px rgba(72, 127, 255, 0.1);
   background-color: #fff;
   padding: 45px 20px;
+  height: 90%;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 30px;
   position: relative;
   z-index: 5;
-  overflow: hidden; }
+  overflow: auto }
   .single-features::before {
     position: absolute;
     content: '';
