--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,7 @@ p {
     content: '';
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #102baf 0%, #1664ff 100%);
+    /* background: linear-gradient(to right, #102baf 0%, #1664ff 100%); */
     top: 0;
     left: 0;
     z-index: -1;
@@ -479,9 +479,9 @@ p {
     -ms-transition: all 0.3s ease-out 0s;
     -o-transition: all 0.3s ease-out 0s;
     transition: all 0.3s ease-out 0s; }
-  .navbar-area.sticky {
+  /* .navbar-area.sticky {
     position: fixed;
-    z-index: 999; }
+    z-index: 999; } */
     .navbar-area.sticky::before {
       opacity: 1; }
   .navbar-area .navbar {
@@ -934,12 +934,13 @@ p {
   box-shadow: 0px 8px 16px 0px rgba(72, 127, 255, 0.1);
   background-color: #fff;
   padding: 45px 20px;
-  height: 90%;
+  height: 95%;
+  overflow: hidden;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 30px;
   position: relative;
   z-index: 5;
-  overflow: auto }
+ }
   .single-features::before {
     position: absolute;
     content: '';
@@ -1002,6 +1003,7 @@ p {
       transition: all 0.3s ease-out 0s; }
     .single-features .features-content .text {
       margin-top: 25px;
+      text-align: justify !important;
       -webkit-transition: all 0.3s ease-out 0s;
       -moz-transition: all 0.3s ease-out 0s;
       -ms-transition: all 0.3s ease-out 0s;
