--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>TARDIS-Con 2024</title>
+    <title>TARDIS-Con {{current_year}}</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="../assets/images/tardis-logo-2.svg" type="image/png">
@@ -118,17 +118,18 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
-                        <div data-countdown="2024-07-08 00:00:00"></div>
+                        <div data-countdown="{{ start_date }}"></div>
                         <div class="header-content text-center">
-                            <h2 class="header-title">TARDIS-Con 2024</h2>
+                            <h2 class="header-title">TARDIS-Con {{current_year}}</h2>
                             <h4 class="text-white">
-                                08 July
-                                - 19 July
-                                2024
+                                {{ start_date.strftime('%d') }}{{start_date.strftime('%B') }}
+                                - {{ end_date.strftime('%d') }}{{ end_date.strftime('%B')
+                                }}
+                                {{ end_date.strftime('%Y') }}
                             </h4>
                             <h4 class="text-white">at Michigan State University, East Lansing, USA</h4>
                             <div class="col-xs-12" style="height:50px;"></div>
-                            <h3 class="text-white">TARDIS-Con 2024 is an unconference-style conference
+                            <h3 class="text-white">TARDIS-Con {{current_year}} is an unconference-style conference
                                 focused on open science code and astrophysics. We believe that collaboration and
                                 open-source development are key to advancing the field of astrophysics and we are
                                 excited to bring together researchers and students from many disciplines such as
@@ -209,7 +210,7 @@
                         </div>
                         <div class="features-content">
                             <h4 class="features-title"><a href="#">Carsus</a></h4>
-                            <p class="text">At TARDIS-Con 2024, we will also be focusing on the Carsus
+                            <p class="text">At TARDIS-Con {{current_year}}, we will also be focusing on the Carsus
                                 project, an atomic structure database that provides input to radiative transfer codes.
                                 Our goals include expanding its capabilities by including additional databases, such as
                                 the Vienna Atomic Line Database (VALD), and exploring how different databases impact the
