--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -13,28 +13,28 @@
     <title>TARDIS-Con {{current_year}}</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="../assets/images/tardis-logo-2.svg" type="image/png">
+    <link rel="shortcut icon" href="assets/images/tardis-logo-2.svg" type="image/png">
 
     <!--====== Bootstrap css ======-->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!--====== Flaticon css ======-->
-    <link rel="stylesheet" href="../assets/css/flaticon.css">
+    <link rel="stylesheet" href="assets/css/flaticon.css">
 
     <!--====== Line Icons css ======-->
-    <link rel="stylesheet" href="../assets/css/LineIcons.css">
+    <link rel="stylesheet" href="assets/css/LineIcons.css">
 
     <!--====== Animate css ======-->
-    <link rel="stylesheet" href="../assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
 
     <!--====== Slick css ======-->
-    <link rel="stylesheet" href="../assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
 
     <!--====== Default css ======-->
-    <link rel="stylesheet" href="../assets/css/default.css">
+    <link rel="stylesheet" href="assets/css/default.css">
 
     <!--====== Style css ======-->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 </head>
@@ -71,7 +71,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="../assets/images/tardis-logo-2-white.svg" width=80px alt="Logo">
+                                <img src="assets/images/tardis-logo-2-white.svg" width=80px alt="Logo">
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo"
@@ -114,7 +114,7 @@
         </div>
 
         <div id="home" class="header-content-area bg_cover d-flex align-items-center"
-            style="background-image: url(../assets/images/SN1994D.jpg)">
+            style="background-image: url(assets/images/SN1994D.jpg)">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
@@ -359,36 +359,36 @@
 
 
     <!--====== jquery js ======-->
-    <script src="../assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
 
     <!--====== Bootstrap js ======-->
-    <script src="../assets/js/bootstrap.min.js"></script>
-    <script src="../assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
 
     <!--====== Counter Up js ======-->
-    <script src="../assets/js/waypoints.min.js"></script>
-    <script src="../assets/js/jquery.counterup.min.js"></script>
+    <script src="assets/js/waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
 
     <!--====== Slick js ======-->
-    <script src="../assets/js/slick.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
 
     <!--====== Magnific Popup js ======-->
-    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Scrolling Nav js ======-->
-    <script src="../assets/js/jquery.easing.min.js"></script>
-    <script src="../assets/js/scrolling-nav.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/scrolling-nav.js"></script>
 
     <!--====== Countdown js ======-->
-    <script src="../assets/js/jquery.countdown.min.js"></script>
+    <script src="assets/js/jquery.countdown.min.js"></script>
 
     <!--====== wow js ======-->
-    <script src="../assets/js/wow.min.js"></script>
+    <script src="assets/js/wow.min.js"></script>
 
 
     <!--====== Main js ======-->
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
