removing extra month

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -122,7 +122,7 @@
                         <div class="header-content text-center">
                             <h2 class="header-title">TARDIS-Con {{current_year}}</h2>
                             <h4 class="text-white">
-                                {{ start_date.strftime('%d') }}{{start_date.strftime('%B') }}
+                                {{ start_date.strftime('%d') }}
                                 - {{ end_date.strftime('%d') }}{{ end_date.strftime('%B')
                                 }}
                                 {{ end_date.strftime('%Y') }}
